# msal-rust

./: Cargo.toml
