[package]
name = "msal"
version = "0.1.0"
authors = ["sagonzal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", default-features=false, features = ["json", "blocking", "rustls-tls"] }
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "7.1.0"
uuid = { version="0.8.1", features=["v4"]}
